--- a/Users/.env
+++ b/Users/.env
@@ -2,6 +2,6 @@ PORT=5000
 MONGO_URL=mongodb://127.0.0.1:27017/users
 JWT_KEY="Keep_Secret"
 
-CLOUDINARY_CLOUD_NAME="drsdg3iuw"
-CLOUDINARY_API_KEY="555518675363561"
-CLOUDINARY_API_SECRET='2FCw8yGuqoDIIzmJk5ejHo9k3YA'
+CLOUDINARY_CLOUD_NAME=""
+CLOUDINARY_API_KEY=""
+CLOUDINARY_API_SECRET=''
